able to dump into redis and get request result from redis dump, updated docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,10 @@ services:
       - ./web-service:/app
     ports:
       - 5001:5000
+    depends_on:
+      - redis
+
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
