Empty query handled, wrong scrip name handled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,20 @@ services:
   web-service:
     build: ./web-service
     volumes: 
-      - C:/Users/1022772/Documents/Work/ExploreBhavCopy\web-service:/app_data
-      # - /web-service:/app_data
+      - C:/Users/1022772/Documents/Work/ExploreBhavCopy/web-service:/app_data
+    #   - /web-service:/app_data
     ports:
       - 5001:5000
     depends_on:
       - redis
+    networks:
+      - network_1
 
   redis:
     image: redis
     ports:
       - 6379:6379
+    networks:
+      - network_1
+networks:
+  network_1:
